# NYCU-Machine-Learning-2024

./: README.md
HW1/: .gitignore  HW1.ipynb  README.md  Report.md  pyproject.toml
HW1/assets/: Avg acc.csv
HW2/: .gitignore  HW2.ipynb  README.md  Report.md  note.md  pyproject.toml
HW3/: .gitignore  HW3.ipynb  README.md  Report.md  pyproject.toml
HW3/assets/: test_result.json
HW4/: .gitignore  HW4.ipynb  README.md  Report.md  pyproject.toml
HW4/assets/: multi_class_svm_result.csv
HW4/lib/: __init__.py
HW5/: .gitignore  HW5.ipynb  README.md  Report.md  pyproject.toml
HW5/lib/: Lda.py  __init__.py
