[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.1"
pandas = "^2.2.3"
rich = "^13.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
