[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.1"
pandas = "^2.2.3"
rich = "^13.8.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
black = "^24.8.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
