[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
rich = "^13.9.3"
black = "^24.10.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
