[tool.poetry]
name = "hw4"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cvxpy = "^1.6.0"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
rich = "^13.9.4"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
