[tool.poetry]
name = "hw5"
version = "0.1.0"
description = ""
authors = ["KeithLin724 <keithlin724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
black = "^24.10.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
